--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -18,7 +18,7 @@ html lang=I18n.locale
     == javascript_include_tag 'application', 'data-turbolinks-track' => true
     == csrf_meta_tags
 
-  body data={controller_name: javascript_controller_name}
+  body
     == render 'layouts/navigation'
     .container
       - if flash.present?
